crash in BKE_scene_update_sound for a soundstrip without linked sound #69558

Closed
opened 2019-09-05 20:50:03 +02:00 by Jack Schaberg · 11 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
Press Ctrl-A and selected "add text" and the program crashes. Tried it twice with this file. Same result both times.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
Press Ctrl-A, clicked "add text." crash.
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] Press Ctrl-A and selected "add text" and the program crashes. Tried it twice with this file. Same result both times. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] Press Ctrl-A, clicked "add text." crash. [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @JaySchay

Added subscriber: @JaySchay
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce this here (in both 2.80 and current master).

  • By Ctrl-A I assume you mean Shift+A?
  • Does this happen when you File > Defaults > Load Factory Settings prior as well?
  • Does this happen in a fresh build from https://builder.blender.org/download/
Cannot reproduce this here (in both 2.80 and current master). - By `Ctrl-A` I assume you mean `Shift+A`? - Does this happen when you `File` > `Defaults` > `Load Factory Settings` prior as well? - Does this happen in a fresh build from https://builder.blender.org/download/
Author

My apologies. Yes, it is Shift-A. I downloaded the latest build of 2.81 alpha just now, opened it, imported the file mentioned above. Did the Shift-A, clicked on "text" and it immediately crashed. A fresh file doesn't crash, and doesn't crash with any other file I have, so it's a mystery what might be different in this file.

My apologies. Yes, it is Shift-A. I downloaded the latest build of 2.81 alpha just now, opened it, imported the file mentioned above. Did the Shift-A, clicked on "text" and it immediately crashed. A fresh file doesn't crash, and doesn't crash with any other file I have, so it's a mystery what might be different in this file.
Member

imported the file mentioned above

cannot see a file mentioned here, mind uploading it?

> imported the file mentioned above cannot see a file mentioned here, mind uploading it?
Author
[The Science Inside.blend](https://archive.blender.org/developer/F7735210/The_Science_Inside.blend)
Member

Can confirm (in this particular scene).
There is a soundstrip in the Video Sequence Editor that doesnt actually have a linked sound, and that will make BKE_sound_get_length crash (this is also called on dependency graph update when you add something to the scene)...
If you remove the (broken?) sound strip from the Video Sequence Editor, you should be fine... but fix is also incoming...

Can confirm (in this particular scene). There is a soundstrip in the Video Sequence Editor that doesnt actually have a linked sound, and that will make `BKE_sound_get_length` crash (this is also called on dependency graph update when you add something to the scene)... If you remove the (broken?) sound strip from the Video Sequence Editor, you should be fine... but fix is also incoming...
Philipp Oeser changed title from adding text crash to crash in BKE_scene_update_sound for a soundstrip without linked sound 2019-09-11 17:31:58 +02:00

This issue was referenced by 30aa67d5d5

This issue was referenced by 30aa67d5d57b3ee4a1f72bfdbb5ee53600ce7fcd
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-11 17:49:47 +02:00
Author

Hi. Yes, deleting the audio track takes care of the crash issue on 2.81 alpha. Thank you.

Hi. Yes, deleting the audio track takes care of the crash issue on 2.81 alpha. Thank you.
Member

In tomorrows build (with the fix above), having the soundstip in there should also not crash anymore...

In tomorrows build (with the fix above), having the soundstip in there should also not crash anymore...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69558
No description provided.