Fix T69558: crash in BKE_scene_update_sound for a soundstrip without linked sound

Crash could be triggered by just adding any object to the scene.

Reviewers: sergey

Maniphest Tasks: T69558

Differential Revision: https://developer.blender.org/D5764